There are minor spacing issues on the search form on the home page vs the results page. Going to leave now as is until bootstrap is completely removed.

--- a/assets/styles/pubswh/pubs_base.scss
+++ b/assets/styles/pubswh/pubs_base.scss
@@ -37,15 +37,6 @@ $fa-font-path: "./fonts" !default;
   }
 }
 
-#pubswh-navigation {
-  .usa-navbar, .usa-nav-inner {
-    max-width: none;
-    padding-left: 0;
-    padding-right: 0
-  }
-  border-bottom: 1px solid $color-gray-lighter;
-}
-
 @import 'main';
 @import 'pagination';
 
