--- a/assets/styles/usgs_viz_id.scss
+++ b/assets/styles/usgs_viz_id.scss
@@ -15,7 +15,6 @@ $site-max-width: 100%;
 
   .usgs-input-group-btn {
     position: relative;
-    top: 1px;
     margin-right: 0;
     border-left: 1px solid $color-gray;
     border-top: 1px solid $color-gray;
@@ -31,6 +30,12 @@ $site-max-width: 100%;
 
   input {
     position: relative;
-    left: -4px;
+    left: -5px;
   }
+
+  .usgs-input-group-addon {
+    position:relative;
+    left: -4rem;
+  }
+
 }
